// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> Button changes the class when hovered 1`] = `
<div
  className="container"
  onKeyDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Hi!
</div>
`;

exports[`<Button /> Button changes the class when hovered 2`] = `
<div
  className="container hover"
  onKeyDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Hi!
</div>
`;

exports[`<Button /> Button changes the class when hovered 3`] = `
<div
  className="container"
  onKeyDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Hi!
</div>
`;
